<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstCut</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="Devices">Devices</string>
    <string name="DeviceManager">Device Manager</string>
    <string name="Send">Send</string>
    <string name="Current_Device">Current device</string>
    <string name="Remove">Remove</string>
    <string name="Edit">Edit</string>
    <string name="Search">Search</string>
    <string name="ManualAdd">Manual Add</string>
    <string name="Name">Name:</string>
    <string name="portNumber">Port number</string>
    <string name="IPaddress">IP address</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>
	<string name="PortManager">Port Manager</string>
	<string name="PaperManager">Paper Manager</string>
	<string name="PortSettings">Port Settings</string>
	<string name="sending_data">Sending data</string>
	<string name="please_wait">Please wait</string>
    <string name="Clear">Clear</string>
    <string name="Line">Line</string>
    <string name="Pen">Pen</string>
    <string name="EditTool">Edit</string>
    <string name="Hand">Hand</string>
    <string name="Current_port">Current port</string>
    <string name="Save">Save</string>
    <string name="Open">Open</string>
    <string name="Unit">Unit</string>
    <string name="Resolution">Resolution</string>
    <string name="DeviceName">Device name</string>
    <string name="Add">Add</string>
    <string name="Absolute">Absolute</string>
	<string name="Relative">Relative</string>
	<string name="Up_tool">Up tool</string>
	<string name="Down_tool">Down tool</string>
	<string name="Init">Init</string>
	<string name="Separator">Separator</string>
	<string name="inch">in</string>
	<string name="cm">cm</string>
	<string name="mm">mm</string>
	<string name="Up">Up</string>
	<string name="Down">Down</string>
	<string name="Sep">Separator</string>
	<string name="Warning">Warning</string>
	<string name="Warning1">Cannot remove default devices</string>
	<string name="Warning2">Are you sure want remove device?</string>
	<string name="Warning3">Cannot find device with this name.</string>
	<string name="Warning4">File with this name exist. Do you want overwrite?</string>
	<string name="Paper">Paper</string>
	<string name="fileName">File name:</string>
	<string name="FileName">File name:</string>
	<string name="Tools">Tools</string>
	<string name="X">X:</string>
	<string name="Y">Y:</string>
	<string name="Width">Width:</string>
	<string name="Height">Height:</string>
	<string name="Port">Port</string>
	<string name="Device">Device</string>
	<string name="no_network">No find network connection.</string>
	<string name="shortWidth">W:</string>
	<string name="shortHeight">H:</string>
	<string name="Text">Text:</string>
	<string name="PaperName">Paper name:</string>
	<string name="SaveChanges">Save changes</string>
	<string name="ChangeName">This paper name exist. Please change name.</string>
	<string name="ChangePortName">This port name exist. Please change name.</string>
	<string name="TestUSB">TestUSB</string>
	<string name="ChoosePortType">Choose port type</string>
	<string name="USBPorts">USB Ports:</string>
	<string name="NotFindPorts">Not find ports</string>
	<string name="ToolOptionTitle">Tool options</string>
	<string name="Apply">Apply</string>
	<string name="Radius">Radius</string>
	<string name="InnerRadius">Inner radius</string>
	<string name="NumPoints">Number of points</string>
	<string name="Rotate">Rotate</string>
	<string name="None">None</string>
	<string name="TransparentToolOption">Transparent tool option</string>
	<string name="TailWidth">Tail width:</string>
	<string name="TailLength">Tail length:</string>
	<string name="CapLength">Cap length:</string>
	<string name="EmptyName">Empty name</string>
	<string name="CurrentFont">Current font:</string>
	<string name="Bold">Bold</string>
	<string name="Italic">Italic</string>
	<string name="Space">Space:</string>
	<string name="LoadFontMsg">Loading font</string>
	<string name="LoadFontTitle">Loading font</string>
	<string name="Pro">%</string>
	<string name="fliphor">Horizontal flip</string>
	<string name="FlipVer">Vertical flip</string>
	<string name="Reset">Reset</string>
	<string name="SwitchXY">Swap X Y</string>
	<string name="NoConnection">No connection.</string>
	<string name="OptionSets">Option sets:</string>
	<string name="Value">Value:</string>
	<string name="CutOptionsManager">Cut options manager</string>
	<string name="CutOptions">Cut options</string>
	<string name="Option">Option</string>
	<string name="OptionName">Option name:</string>
	<string name="OptionValue">Option value:</string>
	<string name="OptionWrning">Please change the name of option set, option set with this name already exists</string>
	<string name="OptionWrning2">Please change the name of option, option with this name already exists</string>
	<string name="OptionWrning3">Option set name is empty</string>
	<string name="OptionSetNotRemove">It is default preset that you cannot remove</string>
	<string name="End">End</string>
	<string name="DeviceWrning">Please change the name of device, device with this name already exists</string>
</resources>
