<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_device_manager"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/DeviceManager"/>
        
     <item
        android:id="@+id/action_port_manager"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/PortManager"/>   
        
     <item
        android:id="@+id/action_paper_manager"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Paper"/>   

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
