<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewCurrentFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CurrentFont"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerFontList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <CheckBox
             android:id="@+id/checkBoxBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Bold" />

         <CheckBox
             android:id="@+id/checkBoxItalic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Italic" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text" />

        <EditText
            android:id="@+id/editTextEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/X" />

        <EditText
            android:id="@+id/editTextX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Y" />

        <EditText
            android:id="@+id/editTextY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Width" />

        <EditText
            android:id="@+id/editTextWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Height" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewRotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rotate" />
        
          
          <TextView
            android:id="@+id/textViewRotateVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/None" />

        <SeekBar
            android:id="@+id/seekRotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Space" />

        <EditText
            android:id="@+id/editTextSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
        
          <TextView
              android:id="@+id/textViewSpaceUnit"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/inch" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/buttonApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Apply" />
        
         <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK" />

    </LinearLayout>

</LinearLayout>
